--- a/public/index.html
+++ b/public/index.html
@@ -71,5 +71,6 @@
   <script type="text/javascript" src="/static/js/jquery.qrcode.js"></script>
   <script type="text/javascript" src="/static/js/qrcode.js"></script>
   <script type="text/javascript" src="/static/js/utf.js"></script>
+  <script type="text/javascript" src="/static/js/jsencrypt.min.js"></script>
 </body>
 </html>
